--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/DorinGhasri/Final-Project-#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "consolidate": "^0.16.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "pug": "^3.0.2",
+    "swig": "^1.4.2"
   }
 }
