--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   "homepage": "https://github.com/DorinGhasri/Final-Project-#readme",
   "dependencies": {
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.6",
+    "csv": "^6.2.7",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "jsdom": "^21.1.0",
+    "mysql2": "^3.1.2",
     "pug": "^3.0.2",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "user-agent": "^1.0.4"
   }
 }
