--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csvtojson": "^2.0.10",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "ismobilejs": "^1.1.1",
     "jsdom": "^21.1.0",
     "mysql2": "^3.1.2",
     "pug": "^3.0.2",
